--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <ul>
+      <li> <a href="index.html"> Home </a></li>
+      <li> <a href="appPage.html"> Apps </a></li>
+    </ul>
+    
     <center>
     <h3>~ Dana Nguyen's Website ~</h3>
     <br>
