--- a/appPage.html
+++ b/appPage.html
@@ -14,7 +14,9 @@
     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/0D_sIMhhrdzKHouBDjXeVlUm2P5ak_gwVKxxY2GyRYf/embed?nosource"></iframe>
       <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/TFOMYNJDYCoCR9QgPuGOPbKm-XGBBLsigipllZNNuFA/embed"></iframe>
       <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/AEMbVRcUZbrkdXu49Gki9ZDiO1e7ekoiOs8EmWEXVJ8/embed"></iframe>
-
+  
+      
+      <style>
   ul {
   list-style-type: none;
   background-color: white;
@@ -56,3 +58,7 @@ h3{
   letter-spacing: -2px;
   text-shadow: 4px 2px 10px white;
 }
+
+    </style>
+  </body>
+  </html>
