--- a/appPage.html
+++ b/appPage.html
@@ -10,7 +10,7 @@
     
     
     <center>
-      <h3> ~Dana's Projects~ </h3>
+      <h3> Dana's Projects </h3>
     <br> 
     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/0D_sIMhhrdzKHouBDjXeVlUm2P5ak_gwVKxxY2GyRYf/embed?nosource"></iframe>
       <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/TFOMYNJDYCoCR9QgPuGOPbKm-XGBBLsigipllZNNuFA/embed"></iframe>
