--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <br>
     <ul>
       <li> <a href="index.html"> Home </a></li>
-      <li> <a href="appPage.html"> Apps </a></li>
+      <li> <a href="appPage.html"> My Apps </a></li>
     </ul>
     
     <center>
