--- a/appPage.html
+++ b/appPage.html
@@ -5,7 +5,7 @@
     <br>
     <ul>
       <li> <a href="index.html"> Home </a></li>
-      <li> <a href="appPage.html"> Apps </a></li>
+      <li> <a href="appPage.html"> My Apps </a></li>
     </ul>
     
     
@@ -25,7 +25,7 @@
   left: 0;
   top: 0;
   position: fixed;
-  padding: 8px;
+  padding: 11px;
   opacity: .6;
   margin: 0;
    
@@ -40,6 +40,7 @@ a {
   text-decoration: none;
   color: blue;
   font-variant: small-caps;
+  font-size: 25px;
 }
 
 li a: hover {
