--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
-  <link href= "https://wallpaper.dog/large/20653074.jpg">
+  <link rel= "icon" type= "image/x-icon" href= "https://wallpaper.dog/large/20653074.jpg">
   <title> Dana's Website </title>
   </head>
   <body>
