--- a/appPage.html
+++ b/appPage.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="icon" type="image/x-icon" href= "https://i.pinimg.com/736x/b8/25/bb/b825bb31be1eb524ca23a0b895b0984d.jpg" >
     <title> Dana's Website </title>
   </head>
   <body>
